# arches

./: CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.mts
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/build-and-test-branch/: action.yml
.github/workflows/: main.yml
arches/: __init__.py  apps.py  settings.py  settings_utils.py  urls.py
arches/app/: const.py  tasks.py
arches/app/datatypes/: base.py  concept_types.py  datatypes.py  url.py
arches/app/etl_modules/: base_data_editor.py  base_import_module.py  branch_excel_exporter.py  branch_excel_importer.py  bulk_data_deletion.py  import_single_csv.py  jsonld_importer.py  save.py  staging_to_tile.py  tile_excel_exporter.py  tile_excel_importer.py
arches/app/functions/: primary_descriptors.py
arches/app/models/: graph.py  models.py  query_expressions.py  resource.py  sql_config.py  tile.py
arches/app/permissions/: arches_default_allow.py  arches_default_deny.py  arches_permission_base.py
arches/app/search/: base_index.py  elasticsearch_dsl_builder.py  mappings.py  search.py  search_export.py  search_term.py
arches/app/templates/: base-manager.htm  base-root.htm  index.htm  javascript.htm
arches/app/utils/: context_processors.py  decorators.py  geo_utils.py  index_database.py  mobile.py  mvt_tiler.py  permission_backend.py  skos.py  transaction.py
arches/app/views/: api.py  auth.py  base.py  etl_manager.py  graph.py  notifications.py  plugin.py  resource.py  search.py  search_layer.py  tile.py  transaction.py
arches/db/patches/: 0001_v7.6_tile_cardinality_check.sql
arches/install/: arches_admin.py  ubuntu_setup.sh
arches/install/arches-templates/: package.json  pyproject.toml  (+1 more)
arches/templatetags/: template_tags.py
arches/test/: runner.py
releases/: 7.6.0.md  7.6.10.md  7.6.14.md  7.6.19.md  7.6.20.md  7.6.21.md  7.6.22.md  7.6.23.md  7.6.24.md  7.6.4.md  8.0.0.md  8.0.10.md  8.0.8.md  8.0.9.md  8.1.0.md  8.1.1.md  8.1.2.md  8.1.3.md  8.2.0.md
tests/: tasks_tests.py  test_settings.py
tests/bulkdata/: branch_excel_tests.py  jsonld_import_tests.py  staging_to_tile_tests.py  tile_excel_tests.py
tests/commands/: test_arches_admin.py
tests/exporter/: datatype_to_rdf_tests.py  jsonld_export_tests.py
tests/importer/: jsonld_import_tests.py
tests/models/: graph_tests.py  resource_test.py
tests/permissions/: permissions_arches_default_deny_tests.py
tests/search/: search_sort_tests.py
tests/utils/: test_add_users.py  test_checks.py  test_geo_utils.py  test_version.py
tests/views/: api_tests.py  auth_tests.py  concept_tests.py  edit_log_tests.py  etl_manager_tests.py  graph_manager_tests.py  resource_tests.py  search_tests.py  spatialview_api_tests.py  user_preference_api_tests.py  workflow_tests.py
webpack/: webpack.common.js  webpack.config.dev.js  webpack.config.prod.js
(+92 files in other folders)
