[build-system]
requires = ["setuptools>=77", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arches"
readme = "README.md"
authors = [
    {name = "Arches Project"}
]
version = "8.2.0a0"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
description = "Arches is an open-source, web-based, geospatial information system for cultural heritage inventory and management."
keywords = ["django", "arches", "cultural heritage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
]
dependencies = [
    "arcgis2geojson==2.0.0",
    "celery==5.5.0",
    "defusedxml==0.7.1",
    "Django~=6.0",
    "django-celery-results==2.6.0",
    "django-cors-headers==4.9.0",
    "django-guardian==3.2.0",
    "django-hosts==7.0.0",
    "django-oauth-toolkit==3.2.0",
    "django-pgtrigger==4.17.0",
    "django-ratelimit==4.1.0",
    "django-recaptcha==4.1.0",
    "django-revproxy==0.13.0",
    "django-migrate-sql-deux==1.4.0",
    "django-webpack-loader==3.2.3",
    "edtf==4.0.1",
    "elasticsearch>=8.19.1,<9.0.0",
    "filetype==1.2.0",
    "openpyxl==3.1.5",
    "pillow>=11.3.0",
    "polib==1.1.1",
    "psycopg2==2.9.11",
    "pycryptodome<4.0.0,>=3.23.0",
    "pyjwt>=2.10.1,<3",
    "pyjwt[crypto]",
    "PyLD[requests]==1.0.5",
    "pyotp>=2.6.0",
    # Upper bound on pyparsing to avoid noisy deprecation warnings on our edtf version.
    "pyparsing<3.3.0",
    "pyprind==2.11.3",
    "pyshp==2.1.2",
    "python-memcached==1.62",
    "python-slugify==8.0.4",
    "qrcode>=7.3.1",
    "rdflib==4.2.2",
    "requests-oauthlib==2.0.0",
    "requests[security]>=2.32.5",
    "semantic-version==2.10.0",
    "SPARQLWrapper==1.8.5",
]

[dependency-groups]
dev = [
    "black==24.4.2",
    "coverage",
    "django-silk==5.4.3",
    "livereload",
    "pre-commit==4.5.1",
    "sst",
]

[project.scripts]
arches-admin = "arches.install.arches_admin:main"

[project.urls]
Homepage = "https://archesproject.org/"
Documentation = "https://arches.readthedocs.io"
Repository = "https://github.com/archesproject/arches.git"
Issues = "https://github.com/archesproject/arches/issues"

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]
namespaces = false

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
